--- a/clase50 - tiempo en javascript.html
+++ b/clase50 - tiempo en javascript.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <script>
-        console.log(`a`)
-        setTimeout(function() {
-            console.log(`b`)
-        }, 0)
-        console.log(`c`)    
+        // console.log(`a`)
+        // setTimeout(() => console.log(`b`), 0)
+        // console.log(`c`)    
+
+        setTimeout(() => console.log(`d`), 2000)
+        for (var i=0; i<10000000000; i++) {
+
+        }
     </script>
 </body>
 </html>
