--- a/clase36 - var let y const las diferencias entre ellos.html
+++ b/clase36 - var let y const las diferencias entre ellos.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <script>
-      var sacha = {
-        nombre: 'Sacha',
-        apellido: 'Lifszyc',
-        edad: 28
+      var daniel = {
+        nombre: 'Daniel',
+        apellido: 'Caldera',
+        edad: 22
       }
 
       function esMayorDeEdad(persona) {
@@ -23,7 +23,6 @@
         console.log(mensaje)
       }
 
-      // esMayorDeEdad(sacha)
 
       for (let i = 0; i < 10; i++) {
         console.log(i)
