--- a/clase41 - estructuras de datos inmutables.html
+++ b/clase41 - estructuras de datos inmutables.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <script>
-      const sacha = {
-        nombre: 'Sacha',
-        apellido: 'Lifszyc',
-        edad: 28
+      const daniel = {
+        nombre: 'Daniel',
+        apellido: 'Caldera',
+        edad: 22
       }
 
       // const cumpleanos = persona => persona.edad++
