--- a/clase40 - closures.html
+++ b/clase40 - closures.html
@@ -16,9 +16,9 @@
       const saludoMexicano = crearSaludo('güey')
       const saludoColombiano = crearSaludo('amigo')
 
-      saludoArgentino('Sacha') // Hola Sacha che
-      saludoMexicano('Sacha') // Hola Sacha güey
-      saludoColombiano('Sacha') // Hola Sacha amigo
+      saludoArgentino('Daniel') // Hola Daniel che
+      saludoMexicano('Daniel') // Hola Daniel güey
+      saludoColombiano('Daniel') // Hola Daniel amigo
 
     </script>
   </body>
